--- a/style.css
+++ b/style.css
@@ -801,3 +801,15 @@ span{
         margin-bottom: 2rem;
     }
 }
+@media (max-width: 600px) {
+    .about h1 {
+        font-size: 2.5rem; 
+    }
+    .about h2 {
+        font-size: 2rem; 
+    }
+    .about p {
+        font-size: 1.4rem; 
+        line-height: 1.5;  
+    }
+}
