--- a/style.css
+++ b/style.css
@@ -829,3 +829,48 @@ span{
 
     
 }
+/* Default (desktop) styles */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-icon {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 30px;
+    width: 40px;
+}
+
+.menu-icon .bar {
+    width: 100%;
+    height: 5px;
+    background-color: var(--main-color);
+}
+
+@media (max-width: 768px) {
+    /* Hide the navbar links on mobile */
+    .navbar {
+        display: none;
+    }
+
+    /* Show the hamburger menu */
+    .menu-icon {
+        display: flex;
+    }
+
+    /* Add styles for the menu when active */
+    .navbar.active {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .navbar a {
+        padding: 1.5rem;
+        text-align: center;
+    }
+}
